# xian-dex-automation

./: .gitignore  AGENTS.md  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
contracts/: README.md  con_dex_strategy_vault.py
docs/: ARCHITECTURE.md  WALLET_MODEL.md
scripts/: README.md  bootstrap_strategy_vault.py
src/xian_dex_automation/: __init__.py  cli.py  config.py  dex.py  rules.py  service.py  storage.py  worker.py
tests/: test_cli.py  test_config.py  test_dex.py  test_frontend.py  test_live_node.py  test_rules.py  test_service.py  test_storage.py  test_strategy_vault_bootstrap.py  test_strategy_vault_contract.py  test_worker.py
