[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xian-dex-automation"
version = "0.1.0"
description = "Deterministic automation service for Xian DEX events"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi>=0.136.1,<0.137",
    "pydantic>=2.13.3,<3",
    "PyYAML>=6.0.3,<7",
    "uvicorn[standard]>=0.46.0,<0.47",
    "xian-tech-py>=0.4.14,<0.5",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0,<0.29",
    "pytest>=9.0.3,<10",
    "ruff>=0.15.12,<0.16",
]

[project.scripts]
xian-dex-automation = "xian_dex_automation.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: requires a running Xian node with DEX contracts and a liquid pair",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
